--- a/src/components/person-details/person-details.css
+++ b/src/components/person-details/person-details.css
@@ -1,8 +1,8 @@
 .person-details {
     display: flex;
-    margin-top: 1rem; /* 0 */
     flex-direction: row;
     padding: 1rem;
+    border: 1px solid #444;
 }
 
 .person-details .person-image {
